# CS2303-Homework-5

./: .cproject  .project  CMakeLists.txt  gameState.txt  initBoardState.txt  testOutput.txt
Debug/: ReferenceCheckers  makefile
Debug/src/: 2021HW5starter.d  CheckerMove.d  Production.d  ReferenceCheckers.d  Tests.d  subdir.mk
src/: 2021HW5starter.cpp  Board.cpp  Board.h  Piece.cpp  Piece.h  Production.cpp  Production.h  Tests.cpp  Tests.h
